youfull/objects/Rep_Detail_Field__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Protected</customSettingsVisibility>
    <description>List of all fields displayed in Rep Detail Page</description>
    <fields>
        <fullName>Column__c</fullName>
        <label>Column</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fields_To_Map__c</fullName>
        <label>Fields To Map</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group__c</fullName>
        <label>Group</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isNonLdr__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isNonLdr</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isRuntime__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isRuntime</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isTransitionLdr__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isTransitionLdr</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isZeroRow__c</fullName>
        <defaultValue>false</defaultValue>
        <description>ROWS DISPLAY ONLY IF GREATER THAN 0 FOR ALL HISTORICAL DATA.</description>
        <label>isZeroRow</label>
        <type>Checkbox</type>
    </fields>
    <label>Rep_Detail_Field</label>
</CustomObject>